--- a/estilos.css
+++ b/estilos.css
@@ -47,7 +47,7 @@ li a {
 .titulo-principal{
     display: flex;
     justify-content: center;
-    padding-top: 50px;
+    padding-top: 15%;
     
     
 }
@@ -56,7 +56,7 @@ li a {
     text-align: center;
 }
 .datos .temperatura {
-    margin-top: 30px;
+    margin-top: 15%;
     text-align:center;
     font-size:80px;
     color: white;
@@ -66,4 +66,31 @@ li a {
 .botonbuscar{
     text-decoration: none;
 }
-
+.data-contenido{
+    display: flex;
+    width: 100vw;
+}
+.data-contenido div {
+    margin:auto;
+    margin-top: 25%;
+    color:white;
+    font-size:20px;
+}
+.data-contenido div {
+    margin:auto;
+    margin-top: 25%;
+    color:white;
+    font-size:20px;
+}
+.data-contenido div  i{
+    display:block;
+    text-align: center;
+    margin:10px;
+    font-size: 25px;
+}
+.data-contenido div  p{
+    display:block;
+    text-align: center;
+    margin:10px;
+    
+}
